--- a/index.html
+++ b/index.html
@@ -26,6 +26,40 @@
             overflow: hidden;
             height: 100vh;
         }
+/* Remove all tap highlights on mobile devices */
+button,
+button.filter-btn,
+[role="button"],
+input[type="button"],
+input[type="submit"],
+input[type="reset"] {
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    user-select: none;
+    outline: none !important;
+}
+        /* Custom Scrollbar */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--surface-color);
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--secondary-color);
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--primary-color);
+}
+/* Smooth scrolling */
+html {
+    scroll-behavior: smooth;
+}
 
         .no-double-tap {
             touch-action: manipulation;
@@ -193,5 +227,6 @@
         🔄 New version available — Refresh
     </button>
 </div>
+
 
 </html>
