--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             overflow: hidden;
             height: 100vh;
         }
+        ::selection {
+    background: rgba(255, 0, 0, 0.452);
+    color: white;
+    /* optional: makes the text readable */
+}
+
 /* Remove all tap highlights on mobile devices */
 button,
 button.filter-btn,
@@ -230,3 +236,4 @@ html {
 
 
 </html>
+
