--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="https://amvverse-anime-card.pages.dev/fav-icon.png" type="png/image/x-icon">
-    <script src="script.js"></script>
+    <script src="data.js"></script>
     <script src="install.js"></script>
     <style>
         :root {
@@ -366,3 +366,4 @@ html {
 
 
 </html>
+
