--- a/main.html
+++ b/main.html
@@ -251,7 +251,7 @@ html {
         const goHome = document.getElementById("goHome");
 
 
-        const prefix = "https://amvverse-image-data.pages.dev/"; // Replace with your image path prefix
+        const prefix = "https://amvverse-image-data.pages.dev/images/"; // Replace with your image path prefix
 
         // Store already loaded images for 2-second caching
         const loadedCache = {};
@@ -366,4 +366,5 @@ html {
 
 
 </html>
+
 
