--- a/upload.html
+++ b/upload.html
@@ -21,19 +21,11 @@
     <script src="https://flask-15v.pages.dev/sw.js"></script>
     <style>
         /* apply only to interactive controls (recommended), or * for whole page */
-         * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: var(--background-color);
-            color: var(--text-color);
-            line-height: 1.6;
-        }
-        
+        html,
+        body,
+        button,
+        a,
+        input,
         .no-double-tap {
             touch-action: manipulation;
             -ms-touch-action: manipulation;
@@ -41,16 +33,19 @@
         }
 
         /* Mobile-first responsive design */
-         .container {
+        .container {
+            width: 100%;
             max-width: 1200px;
             margin: 0 auto;
             padding: 0 15px;
         }
 
         .main-container {
+            padding: 2rem 0;
+            min-height: 100vh;
             position: relative;
             overflow: hidden;
-            min-height: 500px;
+
         }
 
         .upload-page,
@@ -455,7 +450,32 @@
 </head>
 
 <body>
- 
+    <!-- Header -->
+    <header class="main-header">
+        <div class="container">
+            <a href="#" class="logo">𝙰𝙼𝚅 𝚅𝙴𝚁𝚂𝙴</a>
+            <nav class="main-nav">
+                <ul class="nav-links">
+                    <li><a href="https://amvverse.pages.dev/index.html"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="https://amvverse.pages.dev/1-all-content.html"><i class="fas fa-list"></i> All
+                            Contents</a></li>
+                    <li><a href="https://amvverse.pages.dev/help.html"><i class="fas fa-question-circle"></i> How to
+                            Watch</a></li>
+                    <li><a href="https://amvverse.pages.dev/DMCA.html"><i class="fas fa-gavel"></i> DMCA</a></li>
+                </ul>
+            </nav>
+            <div class="header-actions">
+                <div class="search-box" id="Search">
+                    <input type="text" id="search" placeholder="𝚂𝚎𝚊𝚛𝚌𝚑 𝚌𝚘𝚗𝚝𝚎𝚗𝚝 𝙸𝙳...">
+                    <button><i class="fas fa-search"></i></button>
+                </div>
+                <button id="mobile-menu-toggle" class="mobile-menu-toggle">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+        </div>
+    </header>
+
     <!-- Main Content -->
     <main class="gallery-page">
         <div class="container">
