--- a/upload.html
+++ b/upload.html
@@ -47,7 +47,13 @@
             overflow: hidden;
 
         }
-
+.section-title {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+    color: var(--text-color);
+    border-left: 4px solid var(--primary-color);
+    padding-left: 1rem;
+}
         .upload-page,
         .delete-page {
             transition: transform 0.4s ease-in-out;
