--- a/main.html
+++ b/main.html
@@ -97,14 +97,15 @@
             background-color: var(--background-color);
         }
 
-        .section-title {
-            font-size: 2rem;
-            margin-bottom: 1.5rem;
-            color: var(--text-color);
-            border-left: 4px solid var(--primary-color);
-            padding-left: 1rem;
-        }
-
+      .section-title {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+    color: var(--text-color);
+    border-left: 4px solid var(--primary-color);
+    padding-left: 1rem;
+    padding-top: 0.5rem;    /* Add this line */
+    padding-bottom: 0.5rem; /* Add this line */
+}
         .gallery-search {
             max-width: 500px;
             margin: 1rem auto 2rem auto;
@@ -397,3 +398,4 @@
 </div>
 
 </html>
+
