--- a/main.html
+++ b/main.html
@@ -97,14 +97,12 @@
             background-color: var(--background-color);
         }
 
-      .section-title {
+ .section-title {
     font-size: 2rem;
     margin-bottom: 1.5rem;
     color: var(--text-color);
     border-left: 4px solid var(--primary-color);
-    padding-left: 1rem;
-    padding-top: 0.5rem;    /* Add this line */
-    padding-bottom: 0.5rem; /* Add this line */
+    padding: 0.5rem 0 0.5rem 1rem; /* top, right, bottom, left */
 }
         .gallery-search {
             max-width: 500px;
@@ -398,4 +396,5 @@
 </div>
 
 </html>
+
 
