--- a/main.html
+++ b/main.html
@@ -97,12 +97,14 @@
             background-color: var(--background-color);
         }
 
- .section-title {
+.section-title {
     font-size: 2rem;
     margin-bottom: 1.5rem;
     color: var(--text-color);
     border-left: 4px solid var(--primary-color);
-    padding: 0.5rem 0 0rem 1rem; /* top, right, bottom, left */
+    padding-left: 1rem;
+    padding-top: 0.5rem;    /* Add this line */
+    padding-bottom: 0.5rem; /* Add this line */
 }
         .gallery-search {
             max-width: 500px;
@@ -396,6 +398,7 @@
 </div>
 
 </html>
+
 
 
 
