--- a/upload.html
+++ b/upload.html
@@ -5,20 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File Uploader | AMV VERSE</title>
-    <link rel="stylesheet" href="https://amvverse.pages.dev/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>𝙵𝚒𝚕𝚎 𝙿𝚛𝚎𝚟𝚒𝚎𝚠 | 𝙰𝙼𝚅 𝚅𝙴𝚁𝚂𝙴</title>
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <meta name="description"
-        content="AMV VERSE: Stream & download HD Anime, Donghua, Marvel, & blockbuster movies. Watch Solo Leveling, Jujutsu Kaisen, Soul Land, Avengers, and Your Name. Enjoy Hindi DUB, English SUB, and multiple audio options. Your ultimate source for action, fantasy, and romance.">
-    <link rel="manifest" href="https://flask-15v.pages.dev/manifest.json">
-    <link rel="icon" href="https://amvverse-anime-card.pages.dev/fav-icon.png">
-    <link rel="apple-touch-icon" href="/icons/icon-192.png">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="google-site-verification" content="IOkmWrKeS1jEXqTK4E5BRwN2XRA3DsySmfthhqlJGzk" />
-    <link rel="icon" href="https://ik.imagekit.io/qoobmximx/1755723758120.png?updatedAt=1755723796692"
-        type="png/image/x-icon">
-    <script src="https://flask-15v.pages.dev/sw.js"></script>
+    <link rel="icon" href="https://amvverse-anime-card.pages.dev/fav-icon.png" type="png/image/x-icon">
     <style>
         /* apply only to interactive controls (recommended), or * for whole page */
         html,
