--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <!-- Header -->
     <header class="main-header">
         <div class="header-container">
-            <a href="#" class="logo">𝙰𝙼𝚅 𝚅𝙴𝚁𝚂𝙴</a>
+            <a href="/" class="logo">𝙰𝙼𝚅 𝚅𝙴𝚁𝚂𝙴</a>
             <div class="toggle-container">
                 <button class="toggle-btn active" id="mainToggle">
                     <i class="fas fa-home"></i> 𝙷𝚘𝚖𝚎
@@ -223,6 +223,7 @@
     </script>
 </body>
 </html>
+
 
 
 
