--- a/upload.html
+++ b/upload.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>𝙵𝚒𝚕𝚎 𝙿𝚛𝚎𝚟𝚒𝚎𝚠 | 𝙰𝙼𝚅 𝚅𝙴𝚁𝚂𝙴</title>
     <link rel="manifest" href="manifest.json">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="install.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -26,18 +27,7 @@
             -ms-touch-action: manipulation;
             /* legacy IE/Edge */
         }
-:root {
-    --primary-color: #e50914;
-    --secondary-color: #e50914a6;
-    --background-color: #141414;
-    --surface-color: #23252a;
-    --text-color: #ffffff;
-    --text-color-secondary: #a0a0a0;
-    --border-radius: 8px;
-    --transition-speed: 0.3s;
-    --font-family: 'Inter', sans-serif;
-}
-        /* Mobile-first responsive design */
+ /* Mobile-first responsive design */
         .container {
             width: 100%;
             max-width: 1200px;
