--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Content Card | AMV VERSE</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+      <script src="data.js"></script>
+    <script src="install.js"></script>
     <style>
         :root {
             --background-color: #0f0f0f;
@@ -565,3 +567,4 @@
     </script>
 </body>
 </html>
+
