--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
         // Sample data - replace with your actual data
         
         
-        const prefix = "https://example.com/images/";
+        const prefix = "https://amvverse-image-data.pages.dev/images/";
 
         // Store already loaded images for 2-second caching
         const loadedCache = {};
@@ -568,5 +568,6 @@
     </script>
 </body>
 </html>
+
 
 
