--- a/upload.html
+++ b/upload.html
@@ -594,6 +594,9 @@
                         </form>
 
                         <div class="status-message" id="statusMessage"></div>
+                     <a href="https://amvverse.pages.dev/index.html" class="back-link">
+                            <i class="fas fa-arrow-left"></i> 𝙱𝚊𝚌𝚔 𝚝𝚘 𝙷𝚘𝚖𝚎
+                     </a>
                     </div>
                 </div>
 
@@ -628,12 +631,6 @@
                                     <input type="password" id="deleteAuthCode" name="auth_code"
                                         placeholder="𝙴𝚗𝚝𝚎𝚛 𝚜𝚎𝚌𝚛𝚎𝚝 𝚌𝚘𝚍𝚎" required>
                                 </div>
-                                <p class="auth-note">
-                                    <i class="fas fa-info-circle"></i>
-                                    𝚂𝚎𝚌𝚛𝚎𝚝 𝚌𝚘𝚍𝚎𝚜: 𝟿𝟼𝟼𝟷, 𝟽𝟿𝟶𝟹𝟹, 𝟾𝟹𝟿𝟿.
-                                    𝙸𝚏 𝚏𝚘𝚛𝚐𝚘𝚝, 𝚌𝚘𝚗𝚝𝚊𝚌𝚝: 𝚔𝚞𝚖𝚊𝚛𝚊𝚗𝚖𝚊𝚢𝟽𝟿𝟶𝟹𝟹@𝚐𝚖𝚊𝚒𝚕.𝚌𝚘𝚖
-                                    𝚘𝚛 𝚊𝚖𝚟𝚟𝚒𝚟𝚎𝚡@𝚐𝚖𝚊𝚒𝚕.𝚌𝚘𝚖
-                                </p>
                             </div>
 
                             <button type="submit" class="delete-btn" id="deleteBtn">
