--- a/upload.html
+++ b/upload.html
@@ -594,7 +594,7 @@
                         </form>
 
                         <div class="status-message" id="statusMessage"></div>
-                     <a href="https://amvverse.pages.dev/index.html" class="back-link">
+                     <a href="/" class="back-link">
                             <i class="fas fa-arrow-left"></i> 𝙱𝚊𝚌𝚔 𝚝𝚘 𝙷𝚘𝚖𝚎
                      </a>
                     </div>
@@ -640,7 +640,7 @@
 
                         <div class="status-message" id="deleteStatusMessage"></div>
 
-                        <a href="https://amvverse.pages.dev/index.html" class="back-link">
+                        <a href="/" class="back-link">
                             <i class="fas fa-arrow-left"></i> 𝙱𝚊𝚌𝚔 𝚝𝚘 𝙷𝚘𝚖𝚎
                         </a>
                     </div>
