--- a/upload.html
+++ b/upload.html
@@ -769,7 +769,7 @@
             <a href="index.html" class="logo">𝙰𝙼𝚅 𝚅𝙴𝚁𝚂𝙴</a>
             <div class="header-actions">
                 <div class="search-box" id="searchBox">
-                    <input type="text" id="contentSearch" placeholder="Search id...">
+                    <input type="text" id="Search" placeholder="Search id...">
                     <button><i class="fas fa-search"></i></button>
                 </div>
                 <button id="mobile-menu-toggle" class="mobile-menu-toggle">
