--- a/upload.html
+++ b/upload.html
@@ -983,7 +983,7 @@
         });
 
         // Backend API URL - Update this with your Render URL after deployment
-        const API_BASE_URL = 'https://file-uploader-a6uv.onrender.com';
+        const API_BASE_URL = 'https://file-uploader-je1o.onrender.com';
 
         // Page Toggle Functionality
         const uploadToggle = document.getElementById('uploadToggle');
