--- a/upload.html
+++ b/upload.html
@@ -1009,7 +1009,7 @@
         let animeData = [];
 
         // Fetch content data from data.js
-        fetch('https://amvverse.pages.dev/data.js')
+        fetch('https://animesaga.pages.dev/data.js')
             .then(response => response.text())
             .then(data => {
                 // Extract animeData array from the data.js file
