--- a/404.html
+++ b/404.html
@@ -7,32 +7,15 @@
     <title>404 - Lost in the 𝙰𝙼𝚅 𝚅𝙴𝚁𝚂𝙴</title>
     <meta name="description"
         content="AMV VERSE: Stream & download HD Anime, Donghua, Marvel, & blockbuster movies. Watch Solo Leveling, Jujutsu Kaisen, Soul Land, Avengers, and Your Name. Enjoy Hindi DUB, English SUB, and multiple audio options. Your ultimate source for action, fantasy, and romance.">
-    <!-- Tailwind CSS for styling the UI overlay -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Google Fonts for typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
-    <link rel="icon" href="https://ik.imagekit.io/qoobmximx/1755723758120.png?updatedAt=1755723796692"
-        type="png/image/x-icon">
-    <!-- Font Awesome for Icons -->
+    <link rel="icon" href="icons/icon.png" type="png/image/x-icon">
+    <link rel="apple-touch-icon" href="icons/icon.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <!-- Google Fonts: Inter -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-    <link rel="icon" href="https://ik.imagekit.io/qoobmximx/1755723758120.png?updatedAt=1755723796692"
-        type="png/image/x-icon">
-    <!-- Font Awesome for Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <!-- Google Fonts: Inter -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script src="script.js"></script>
     <style>
         /* Base styles */
         body {
@@ -41,11 +24,13 @@
             overflow: hidden;
             /* Prevent scrollbars from the canvas */
         }
-   ::selection {
-    background: rgba(255, 0, 0, 0.452);
-    color: white;
-    /* optional: makes the text readable */
-}
+
+        ::selection {
+            background: rgba(255, 0, 0, 0.452);
+            color: white;
+            /* optional: makes the text readable */
+        }
+
         /* Canvas for the 3D background */
         #bg {
             position: fixed;
@@ -371,7 +356,7 @@
         </p>
         <a href="/"
             class="mt-8 inline-block bg-red-600 text-white font-semibold px-6 py-3 rounded-lg shadow-lg hover:bg-red-700 transition-transform transform hover:scale-105 duration-300 ease-in-out focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-opacity-50">
-           𝙱𝚊𝚌𝚔 𝚝𝚘 𝙷𝚘𝚖𝚎
+            𝙱𝚊𝚌𝚔 𝚝𝚘 𝙷𝚘𝚖𝚎
         </a>
     </div>
 
